feat: generating + sending out schedules
